experimental/parser/testdata/lexer/comments/unterminated.proto.stderr.txt
error: encountered unterminated `/*` delimiter
  --> testdata/lexer/comments/unterminated.proto:1:1
   | 
 1 | /*
   | ^^ expected to be closed by `*/`

encountered 1 error
